--- a/test-bench/.gitignore
+++ b/test-bench/.gitignore
@@ -47,7 +47,8 @@
 ## Build tool directories for auxiliary files
 # latexrun
 latex.out/
-
+*.latexrun.db
+*.latexrun.db.lock
 ## Auxiliary and intermediate files from other packages:
 # algorithms
 *.alg
